brightening, button fixes, column header alignment, disabled scroll, reorganized add to playlist feature, got rid of welcome message, resized landing page elements, made fonts larger

--- a/browser/scss/directives/songList.scss
+++ b/browser/scss/directives/songList.scss
@@ -4,9 +4,17 @@ $green: #90EE90;
 $yellow: #FFFE8D;
 $pink: #FFB6C1;
 $orange: #FFA07A;
-$background-color: #222222;
-$background-color-light: #333333;
+$ocean-blue: #5F9EA0;
 $light-gray: rgb(164,164,164);
+
+//original theme
+// $background-color: #222222;
+// $background-color-light: #333333;
+
+//for presentation
+$background-color: #333333;
+$background-color-light: rgb(104,104,104);
+
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,300,400);
 
 #song-list-container {
@@ -35,18 +43,24 @@ $light-gray: rgb(164,164,164);
 			border-bottom: solid 3px $background-color-light;
 			margin-top: 10px;
 			margin-bottom: 0px;
-			.col-md-4 {
-				margin-right: -20px;
-			}
-			.col-md-3 {
-				margin-right: -15px;
+			#artist-label {
+				// margin-right: -15px;
 				margin-left: 5px;
+			}
+			#title-label {
+				margin-left: 5px;
+				padding-left: 0px;
+				padding-right: 0px;
 			}
 			#duration-label {
-				margin-left: 5px;
+				padding-left: 0px;
+				margin-left: -10px;
+			}
+			#last-played-label {
+				padding-left: 0px;
 			}
 			#source-label {
-				margin-left: -40px;
+				margin-left: -50px;
 			}
 			#header-item {
 				color: white;
@@ -99,7 +113,8 @@ $light-gray: rgb(164,164,164);
 	// box-shadow: 0px 2px 5px black;
 	.panel-heading {
 		background-color: $blue;
-		border-top-right-radius: 0px;
+		border-top-right-radius: 2px;
+		border-top-left-radius: 20px;
 		// font-size: 16px;
 	}
 
@@ -149,6 +164,10 @@ $light-gray: rgb(164,164,164);
 }
 
 .coolPanel {
+	.panel-heading {
+		font-size: 16px;
+	}
+	border: none;
 	border-bottom: none;
 	margin-top: 20px;
 	width: 100%;
@@ -188,14 +207,14 @@ $light-gray: rgb(164,164,164);
 	h2, li {
 		list-style-type: none;
 		font-family: 'Roboto', sans-serif;
-		font-weight: 300;
-		font-size: 1.2em;
+		font-weight: 400;
+		font-size: 1.3em;
 		letter-spacing: .02em;
 	}
 
 	.panel-heading, .playlist-panel-heading {
 		color: $background-color;
-		border-top-left-radius: 20px;
+		// border-top-left-radius: 20px;
 		border-top-right-radius: 20px;
 	}
 
