--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -4,9 +4,15 @@ $green: #90EE90;
 $yellow: #FFFE8D;
 $pink: #FFB6C1;
 $orange: #FFA07A;
-$background-color: #222222;
-$background-color-light: #333333;
 $mint-green: #C5EEBF;
+
+//original theme
+// $background-color: #222222;
+// $background-color-light: #333333;
+
+//for presentation
+$background-color: #333333;
+$background-color-light: rgb(104,104,104);
 
 #home {
 	// min-height: 900px;
